fix: 修正圖片路徑

--- a/src/password_reset_3.html
+++ b/src/password_reset_3.html
@@ -16,7 +16,7 @@
             <form action="" method="POST" class="register_form">
                 <h4>密碼修改完成</h4>
                 <p>歡迎回到Sìkha牧場</p>
-                <img src="../img/material/animal_horse_run.png" alt="">
+                <img src="./img/material/animal_horse_run.png" alt="">
                 <button type="button" id="psdReset_complete">完成</button>
             </form>
             <i class="bi bi-x"></i>
