--- a/src/password_reset_2.html
+++ b/src/password_reset_2.html
@@ -12,7 +12,7 @@
     
     <div id="back_bg" style="top:0;">
         <div id="login_box">
-            <div class="shikaBlock"><h1><img src="../img/logo_white.svg" alt=""></h1></div>
+            <div class="shikaBlock"><h1><img src="./img/logo_white.svg" alt=""></h1></div>
             <div class="loginBlock ">
                 <form action="" method="POST" id="password_reset">
                     <h4>重設密碼</h4>
@@ -35,8 +35,7 @@
 <!-- footer -->
 @@include('./layout/footer.html')
 
-<!-- <script src="./js/vendors/splide.min.js"></script> -->
-<script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/js/splide.min.js"></script>
+
 <script src="./js/login.js"></script>
 </body>
 
