style: 後臺活動管理取消上下架時間限制

--- a/src/back_activity_add.html
+++ b/src/back_activity_add.html
@@ -58,7 +58,7 @@
                     <h5>活動介紹</h5>
                     <textarea rows="10" cols="50" required></textarea>
                 </div>
-                <div class="oneline margintop_30">
+                <!-- <div class="oneline margintop_30">
                     <label for="">上架時間</label>
                     <input type="date" id="on_date" required>
                     <input type="time" value="23:59" id="on_time">
@@ -67,6 +67,15 @@
                     <label for="">下架時間</label>
                     <input type="date" id="off_date">
                     <input type="time" value="23:59" id="off_time">
+                </div> -->
+
+                <div class="onoroff">
+                    <span class="state">上架</span>
+                    <label class="switch">
+                        <input type="checkbox" checked class="show-switch-btn">
+                        <span class="slider round"></span>
+                    </label>
+                    
                 </div>
 
                 <div class="buttons">
