--- a/src/back_activity_modify.html
+++ b/src/back_activity_modify.html
@@ -60,7 +60,7 @@
                     <h5>活動介紹</h5>
                     <textarea rows="10" cols="50" required v-model="activity.description"></textarea>
                 </div>
-                <div class="oneline margintop_30">
+                <!-- <div class="oneline margintop_30">
                     <label for="">上架時間</label>
                     <input type="date" id="on_date" required v-model="activity.on_date" readonly>
                     <input type="time" value="23:59" id="on_time" v-model="activity.on_time" readonly>
@@ -69,6 +69,15 @@
                     <label for="">下架時間</label>
                     <input type="date" id="off_date" v-model="activity.off_date">
                     <input type="time" value="23:59" id="off_time"  v-model="activity.off_time">
+                </div> -->
+
+                <div class="onoroff">
+                    <span class="state">上架</span>
+                    <label class="switch">
+                        <input type="checkbox" checked class="show-switch-btn">
+                        <span class="slider round"></span>
+                    </label>
+                    
                 </div>
 
                 <div class="buttons">
