feat: 首頁最新消息及熱門活動抓資料

--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,8 @@
             </div>
             <ul id="indexNewsApp" class="indexNewsList">
                 <li v-for="news in newslist">
-                    <p>{{news.date}}</p>
-                    <h5>{{news.title}}</h5>
+                    <p>{{news.DATE}}</p>
+                    <h5>{{news.TITLE}}</h5>
                 </li>
             </ul>
             <a href="news.html" class="viewMore" data-aos="zoom-in" data-aos-duration="1500">
