--- a/src/activity.html
+++ b/src/activity.html
@@ -76,17 +76,17 @@
                         <div class="item_r_cover">
                             <img v-if='aaa.icon_img' @click="open(aaa)" class="item_img_icon" :src="aaa.icon_img"
                                 alt="">
-                            <!-- <button v-if='aaa.time_period' class="reserve" :class="'-index'+ activeIndex"
+                            <button v-if='aaa.time_period' class="reserve" :class="'-index'+ activeIndex"
                                 :style="{'background': all_data[activeIndex].button_bg}"
-                                @click="open(aaa)">點我預約</button> -->
+                                @click="open(aaa)">點我預約</button>
                         </div>
                     </div>
                 </div>
                 <div class="item_p">
                     <h5 class="item_title">{{aaa.title}}</h5>
                     <p class="item_desc">{{aaa.desc}}</p>
-                    <button v-if='aaa.time_period' class="reserve" :class="'-index'+ activeIndex"
-                        :style="{'background': all_data[activeIndex].button_bg}" @click="open(aaa)">點我預約</button>
+                    <!-- <button v-if='aaa.time_period' class="reserve" :class="'-index'+ activeIndex"
+                        :style="{'background': all_data[activeIndex].button_bg}" @click="open(aaa)">點我預約</button> -->
                     <br>
                 </div>
             </div>
