feat: 後臺活動新增功能初版 (add_activity.php)

--- a/src/back_activity_modify.html
+++ b/src/back_activity_modify.html
@@ -90,7 +90,7 @@
 
         
 
-            <p class="tibameMessage margintop_50">本網站為緯育TibaMe前端設計工程師班第72期第二組學員專題成果作品，本平台僅供學習、展示之用。</p>
+            <p class="tibameMessage margintop_50">本網站為緯育TibaMe前端設計工程師班第74期第六組學員專題成果作品，本平台僅供學習、展示之用。</p>
         </main>    
     </main>
 
