--- a/src/back_activity.html
+++ b/src/back_activity.html
@@ -60,7 +60,7 @@
             </ul>
         
 
-            <p class="tibameMessage">本網站為緯育TibaMe前端設計工程師班第72期第二組學員專題成果作品，本平台僅供學習、展示之用。</p>
+            <p class="tibameMessage">本網站為緯育TibaMe前端設計工程師班第74期第六組學員專題成果作品，本平台僅供學習、展示之用。</p>
         </main>
     </div>
 
