fix: 修補功能與排版

--- a/src/products_necessities.html
+++ b/src/products_necessities.html
@@ -22,9 +22,9 @@
         </div>
 
         <div class="main_top container-lg">
-            <a href="./products.html">全部</a>
-            <a href="./products_refrigeration.html">冷凍/冷藏</a>
-            <a href="./products_necessities.html">日用品</a>
+            <a href="./products.html" class="nece_a">全部</a>
+            <a href="./products_refrigeration.html" class="nece_a">冷藏</a>
+            <a href="./products_necessities.html" class="nece_a">日用品</a>
         </div>
 
         <div class="list container-lg">
