--- a/src/products.html
+++ b/src/products.html
@@ -23,7 +23,7 @@
 
         <div class="main_top container-lg">
             <a href="./products.html">全部</a>
-            <a href="./products_refrigeration.html">冷凍/冷藏</a>
+            <a href="./products_refrigeration.html">冷藏</a>
             <a href="./products_necessities.html">日用品</a>
         </div>
 
