feat :會員RWD修改完成

--- a/src/member.html
+++ b/src/member.html
@@ -99,8 +99,8 @@
 		</div>
 
 		<!-- 第二區  活動預約-->
-		<div class="mb_container">
-			<div class="act_list tab" id="act_list" data-id="btn2">
+		<div class="mb_container container-lg">
+			<div class="act_list tab co" id="act_list" data-id="btn2">
 				<h3 class="act_date">5/20(六)</h3>
 				<h4 class="act_title">乳牛吃飽飽</h4>
 				<p class="act_time">預約時間:下午:2:00 預約人數:4人</p>
