--- a/src/checkout.html
+++ b/src/checkout.html
@@ -37,7 +37,7 @@
 					</li>
 					<li v-for="(product, index) in products" class="carTitle carInfo">
 						<img :src="product.img" class="infoImg" />
-						<p>{{product.info}}</p>
+						<p>{{product.name}}</p>
 						<p>NT${{product.price}}</p>
 						<p>
 							<input
@@ -48,7 +48,7 @@
 							/><input
 								type="text"
 								class="quantity"
-								v-model="product.quantity"
+								v-model="product.count"
 							/><input
 								type="button"
 								class="subBtn mbBtn"
@@ -56,7 +56,7 @@
 								@click="add(index, 1)"
 							/>
 						</p>
-						<p>NT$ {{product.price * product.quantity}}</p>
+						<p>NT$ {{product.price * product.count}}</p>
 						<img
 							src="./img/icon/garbageCan.png"
 							class="garbageCan"
@@ -94,11 +94,11 @@
 					<li v-for="(product, index) in products" class="carTitle carInfo">
 						<div class="imgInfo">
 							<img :src="product.img" class="infoImg" />
-							<p>{{product.info}}</p>
+							<p>{{product.name}}</p>
 						</div>
 						<p>NT$ {{product.price}}</p>
-						<p>{{product.quantity}}</p>
-						<p>NT$ {{product.price * product.quantity}}</p>
+						<p>{{product.count}}</p>
+						<p>NT$ {{product.price * product.count}}</p>
 					</li>
 					<li class="lastTotal">
 						<p>運費NT$ {{freight}}</p>
