--- a/src/back_activity_add.html
+++ b/src/back_activity_add.html
@@ -17,7 +17,7 @@
                 <form class="activity-detail" id="activity-add-app">
                     <div class="img-area">
                         <input type="file" id="p_file" @change="fileSelected">
-                        <div class="preview" id="drop_zone"><img v-if="img" :src="img" class="preview-img"><span class="text">圖片拖曳至此處</span></div>
+                        <div class="preview" id="drop_zone" @dragover="dragover" @dragleave="dragleave" @drop="drop"><img v-if="img" :src="img" class="preview-img"><span class="text">圖片拖曳至此處</span></div>
                     </div>
                     <div class="margintop_30">
                         <h5>活動名稱</h5>
@@ -29,7 +29,7 @@
                     </div>
                     <div class="oneline margintop_25">
                         <label>時間長度</label>
-                        <input type="radio" id="30" name="time" value="30" v-model="time" checked>
+                        <input type="radio" id="30" name="time" value="30" v-model="time">
                         <label for="30">30分鐘</label>
                         <input type="radio" id="60" name="time" value="60" v-model="time">
                         <label for="60">60分鐘</label>
@@ -57,6 +57,22 @@
                     <div class="margintop_25">
                         <h5>活動介紹</h5>
                         <textarea rows="10" cols="50" v-model="desc" required></textarea>
+                    </div>
+
+                    <div class="margintop_25">
+                        <label>動物分類</label>
+                        <input type="radio" name="catergory" id="cow" value="cow" v-model="category">
+                        <label for="cow">牛</label>
+                        <input type="radio" name="catergory" id="sheep" value="sheep" v-model="category">
+                        <label for="sheep">羊</label>
+                        <input type="radio" name="catergory" id="deer" value="deer" v-model="category">
+                        <label for="deer">鹿</label>
+                        <input type="radio" name="catergory" id="pig" value="pig" v-model="category">
+                        <label for="pig">豬</label>
+                        <input type="radio" name="catergory" id="horse" value="horse" v-model="category">
+                        <label for="horse">馬</label>
+                        <input type="radio" name="catergory" id="alpaca" value="alpaca" v-model="category">
+                        <label for="alpaca">草泥馬</label>
                     </div>
                     <!-- <div class="oneline margintop_30">
                         <label for="">上架時間</label>
@@ -93,6 +109,6 @@
         </main>
     </div>
 
-    <script src="js/back_activity_detail.js"></script>
+    <script src="js/back_activity_add.js"></script>
 </body>
 </html>
