feat: 重設&重設完成切面切換 style: 欄位id衝突

--- a/src/password_reset_2.html
+++ b/src/password_reset_2.html
@@ -9,34 +9,53 @@
 </head>
 
 <body>
-    
+
+
+    @@include('./layout/header.html')
+    @@include('./layout/login_register.html')
+    <!-- header -->
+
     <div id="back_bg" style="top:0;">
         <div id="login_box">
-            <div class="shikaBlock"><h1><img src="./img/logo_white.svg" alt=""></h1></div>
-            <div class="loginBlock ">
-                <form action="" method="POST" id="password_reset">
+            <div class="shikaBlock">
+                <h1><img src="./img/logo_white.svg" alt=""></h1>
+            </div>
+            <div class="resetBlock">
+                <!-- 重設密碼開始 -->
+                <form action="" method="POST" class="password_reset_sendPWD">
                     <h4>重設密碼</h4>
                     <p>請輸入您的新密碼</p>
-                    <label for="password"><h5>密碼</h5></label>
-                    <input type="password" name="password" id="password">
-                    <label for="repassword"><h5>密碼確認</h5></label>
-                    <input type="password" name="repassword" id="repassword">
+                    <label for="reset_password">
+                        <h5>密碼</h5>
+                    </label>
+                    <input type="password" name="password" id="reset_password">
+                    <label for="reset_repassword">
+                        <h5>密碼確認</h5>
+                    </label>
+                    <input type="password" name="repassword" id="reset_repassword">
                     <button type="button" id="send_psd">繼續</button>
+                </form>
+
+                <!-- 重設密碼完成 -->
+                <form action="" method="POST" class="reset_comple_form form-off">
+                    <h4>密碼修改完成</h4>
+                    <p>歡迎回到Sìkha牧場</p>
+                    <img src="./img/material/animal_horse_run.png" alt="">
+                    <button type="button" id="psdReset_complete">完成</button>
                 </form>
                 <i class="bi bi-x"></i>
             </div>
         </div>
     </div>
-    <div style="height: 200px;"></div>
-    <!-- header -->
-    @@include('./layout/header.html')
+
+    <div style="height: 200px;z-index: -10;"></div>
 
 
-<!-- footer -->
-@@include('./layout/footer.html')
+    <!-- footer -->
+    @@include('./layout/footer.html')
 
 
-<script src="./js/login.js"></script>
+    <script src="./js/reset_password.js"></script>
 </body>
 
 </html>
