feat: 從DB取出資料

--- a/src/back_products_origi.html
+++ b/src/back_products_origi.html
@@ -94,7 +94,62 @@
                         </ol>
                     </li>
 
-                   
+                    <li data-prd_number="37741249" data-prd_name="鮮奶酪" data-prd_condition="on" class="list_item -on">
+                        <label class="check_container">
+                            <input type="checkbox" class="select_item">
+                            <span class="checkmark"></span>
+                        </label>
+                        <img src="./img/products/papaya.jpg" alt="" class="prd_pic">
+                        <p class="prd_number">37741249</p>
+                        <p class="prd_name">木瓜牛奶(六入組)</p>
+                        <p class="prd_cost">239</p>
+                        <p class="prd_price">339</p>
+                        <p class="prd_inStock">20</p>
+                        <p class="prd_condition">上架中</p>
+                        <button type="button" class="btn-green prd_edit">修改</button>
+                    </li>
+                    <li data-prd_number="37741250" data-prd_name="鮮奶酪" data-prd_condition="off" class="list_item -off">
+                        <label class="check_container">
+                            <input type="checkbox" class="select_item">
+                            <span class="checkmark"></span>
+                        </label>
+                        <img src="./img/products/panna_cotta.jpg" alt="" class="prd_pic">
+                        <p class="prd_number">37741250</p>
+                        <p class="prd_name">鮮奶酪</p>
+                        <p class="prd_cost">239</p>
+                        <p class="prd_price">339</p>
+                        <p class="prd_inStock">20</p>
+                        <p class="prd_condition">未上架</p>
+                        <button type="button" class="btn-green prd_edit">修改</button>
+                    </li>
+                    <li data-prd_number="37741251" data-prd_name="羊毛毯(黃)" data-prd_condition="off" class="list_item -off">
+                        <label class="check_container">
+                            <input type="checkbox" class="select_item">
+                            <span class="checkmark"></span>
+                        </label>
+                        <img src="./img/products/blanket_y.jpg" alt="" class="prd_pic">
+                        <p class="prd_number">37741251</p>
+                        <p class="prd_name">羊毛毯(黃)</p>
+                        <p class="prd_cost">339</p>
+                        <p class="prd_price">549</p>
+                        <p class="prd_inStock">10</p>
+                        <p class="prd_condition">未上架</p>
+                        <button type="button" class="btn-green prd_edit">修改</button>
+                    </li>
+                    <li data-prd_number="37741252" data-prd_name="動物餅乾" data-prd_condition="off" class="list_item -off">
+                        <label class="check_container">
+                            <input type="checkbox" class="select_item">
+                            <span class="checkmark"></span>
+                        </label>
+                        <img src="./img/products/animal_cookies.jpg" alt="" class="prd_pic">
+                        <p class="prd_number">37741252</p>
+                        <p class="prd_name">動物餅乾</p>
+                        <p class="prd_cost">120</p>
+                        <p class="prd_price">200</p>
+                        <p class="prd_inStock">50</p>
+                        <p class="prd_condition">未上架</p>
+                        <button type="button" class="btn-green prd_edit">修改</button>
+                    </li>
                 </ul>
 
 
