--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -27,9 +27,9 @@
                     <div class="splide01">
                         <div class="splide__track">
                             <ul class="splide__list">
-                                <li class="splide__slide"><img src="./img/products/strawberry_1200.jpg" alt=""></li>
+                                <!-- <li class="splide__slide"><img src="./img/products/strawberry_1200.jpg" alt=""></li>
                                 <li class="splide__slide"><img src="./img/products/berry2_1200.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/products/berry3_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/products/berry3_1200.jpg" alt=""></li> -->
                             </ul>
                         </div>
                     </div>
@@ -38,9 +38,9 @@
                         <div class="splide__track">
 
                             <ul class="splide__list under">
-                                <li class="splide__slide"><img src="./img/products/strawberry_1200.jpg" alt=""></li>
+                                <!-- <li class="splide__slide"><img src="./img/products/strawberry_1200.jpg" alt=""></li>
                                 <li class="splide__slide"><img src="./img/products/berry2_1200.jpg" alt=""></li>
-                                <li class="splide__slide"><img src="./img/products/berry3_1200.jpg" alt=""></li>
+                                <li class="splide__slide"><img src="./img/products/berry3_1200.jpg" alt=""></li> -->
                             </ul>
 
                         </div>
@@ -50,11 +50,11 @@
             </div>
             <!-- 主圖區塊結束 -->
             <div class="pd_info">
-                <h3 id="pd_info_name">草莓牛奶(六入組)</h3>
-                <h5 class="pd_info_slog">原果新鮮草莓牛奶</h5>
-                    <h5 class="pd_info_slog">全部手工現做果汁現煮</h5>
-                    <p id="pd_info_ingredient">．成分：生乳、水、糖、草莓汁 <BR>．保存期限：冷藏14天</p>
-                    <h4 id="pd_info_pricr">299</h4>
+                <h3 id="pd_info_name"></h3>
+                <h5 class="pd_info_slog"></h5>
+                    <h5 class="pd_info_slog"></h5>
+                    <p id="pd_info_ingredient"></p>
+                    <h4 id="pd_info_pricr"></h4>
                     <div class="pd_info_stock">
                         <h5>數量</h5>
 
@@ -63,7 +63,7 @@
                             <input type="text" id="pd_stockCount_input" value="1" name="add_prd_count" readonly>
                             <button class="pd_stockCount_btn" id="pd_stockCount_plus">＋</button>
                         </div>
-                        <h5>在庫數量：<span id="pd_inStock">100</span></h5>
+                        <h5>在庫數量：<span id="pd_inStock"></span></h5>
                     </div>
                     <div class="pd_info_btn">
                         <a href="#" id="pd_info_cart">放入購物車</a><br>
@@ -76,16 +76,16 @@
         <!-- 專推 -->
         <h3 class="pd_intro_h3">商品介紹</h3>
         <div class="intro_area">
-            <div class="pd_intro">
+            <!-- <div class="pd_intro">
                 <div class=" pd_intro_pic"><img src="./img/products/cow_1200.jpg" alt="">
                 </div>
                 <p>使用每日現擠的牛乳製成，無人工反式脂肪與人工賀爾蒙</p>
-            </div>
+            </div> -->
 
-            <div class="pd_intro">
+            <!-- <div class="pd_intro">
                 <div class="pd_intro_pic "><img src="./img/products/berry_1200.jpg" alt=""></div>
                 <p>當季限定！新鮮草莓在裡面！</p>
-            </div>
+            </div> -->
         </div>
         <h3 class="pd_recommend_h3">推薦商品</h3>
         <!-- 推薦商品 -->
