feat: 修改推薦商品連結

--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -94,30 +94,30 @@
                 <div class="splide__track">
                     <ul class="pd_recommend_list splide__list">
                         <li class="splide__slide">
-                            <a href="#">
+                            <a href="./product_detail.html?prd_number=11">
                                 <img src="./img/products/coffee_1200.jpg" alt="">
                                 <div class="pd_recommend_text">
                                     <p class="pd_recommend_name">咖啡牛奶</p>
-                                    <p class="pd_recommend_price">299</p>
+                                    <p class="pd_recommend_price">290</p>
                                 </div>
                             </a>
                         </li>
 
                         <li class="splide__slide">
                             <a href="#">
-                                <img src="./img/products/apple.jpg" alt="">
+                                <img src="./img/products/blanket_r.jpg" alt="">
                                 <div class="pd_recommend_text">
-                                    <p class="pd_recommend_name">蘋果牛奶</p>
-                                    <p class="pd_recommend_price">299</p>
+                                    <p class="pd_recommend_name">羊毛毯(紅)</p>
+                                    <p class="pd_recommend_price">549</p>
                                 </div>
                             </a>
                         </li>
                         <li class="splide__slide">
-                            <a href="#">
-                                <img src="./img/products/papaya.jpg" alt="">
+                            <a href="./product_detail.html?prd_number=6">
+                                <img src="./img/products/animal_cookies.jpg" alt="">
                                 <div class="pd_recommend_text">
-                                    <p class="pd_recommend_name">木瓜牛奶</p>
-                                    <p class="pd_recommend_price">299</p>
+                                    <p class="pd_recommend_name">動物餅乾</p>
+                                    <p class="pd_recommend_price">200</p>
                                 </div>
                             </a>
                         </li>
