--- a/src/back_activity_add.html
+++ b/src/back_activity_add.html
@@ -16,7 +16,9 @@
             
                 <form class="activity-detail" id="activity-add-app">
                     <div class="img-area">
-                        <input type="file" id="p_file" @change="fileSelected">
+                        <label for="p_file" class="btn-red choose-file" style="font-size: 18px;">選擇檔案</label>
+                        <span class="filename">尚未選擇檔案</span>
+                        <input type="file" id="p_file" style="display: none;" @change="fileSelected">
                         <div class="preview" id="drop_zone" @dragover="dragover" @dragleave="dragleave" @drop="drop"><img v-if="img" :src="img" class="preview-img"><span class="text">圖片拖曳至此處</span></div>
                     </div>
                     <div class="margintop_30">
