--- a/src/products.html
+++ b/src/products.html
@@ -39,7 +39,7 @@
 
 
         <div class="main_down container-lg">
-            <a href="./product_detail.html">
+            <a href="./product_detail.html?prd_number=1">
                 <div class="down-in">
                     <img src="./img/products/panna_cotta.jpg" alt="">
                     <h5>鮮奶烙</h5>
