feat 會員標籤修改

--- a/src/member.html
+++ b/src/member.html
@@ -33,10 +33,10 @@
 
 				<div class="mb_name">
 					<label for="">
-						姓名:<p></p>
+						姓名:<p id="mbName"></p>
 					</label>
 					<label for=""> 
-						信箱:<p></p>
+						信箱:<p id="mbEmail"></p>
 					</label>
 				</div>
 
@@ -46,16 +46,16 @@
 					</label>
 					<div class="cts">
 						<select name="" id="city" class="ads">
-							<option value="000">---台北市---</option>
+							<option value="000"></option>
 						</select>
 
 						<select name="" id="area" class="ads">
-							<option value="000">---大安區---</option>
+							<option value="000"></option>
 						</select>
 
 						<input
 							type="text"
-							placeholder="忠孝東路四段216號2樓"
+							placeholder=""
 							id="address"
 							class="mb_input"
 						/>
@@ -68,7 +68,7 @@
 					</label>
 					<input
 						type="text"
-						placeholder="0919387222"
+						placeholder=""
 						name="tel"
 						class="mb_input"
 					/>
@@ -95,6 +95,13 @@
 				<div class="mb_btn">
 					<button class="save_btn">確認修改</button>
 				</div>
+
+
+				<div class="mb_btn">
+					<button class="logout">帳號登出</button>
+				</div>
+
+
 			</div>
 		</div>
 
