feat:修改member_mg頁面將資料庫的會員資料顯示在畫面上，新增輸入框位輸入完整提示字，建立member_mg.php

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -191,12 +191,14 @@
 									class="payId payInput"
 									placeholder="0000"
 									maxlength="4"
+									@keydown="creditdown"
+									@keyup="creditup"
 									v-model="cardInfo.cardNum.no4"
 								/>
 								
 							<span>{{cardNumErrMsg}}</span>
 							</p>
-							<p class="cardAll">
+							<p class="cardAll carddate">
 								<label for="date">到期日</label>
 								<input
 									type="text"
@@ -204,8 +206,6 @@
 									class="month date payInput"
 									placeholder="MM"
 									maxlength="2"
-									@keydown="creditdown"
-									@keyup="creditup"
 									v-model="cardInfo.cardDate.month"
 								/>
 								/
@@ -214,20 +214,21 @@
 									class="year date payInput"
 									placeholder="YY"
 									maxlength="2"
-									@keydown="creditdown"
-									@keyup="creditup"
 									v-model="cardInfo.cardDate.year"
 								/>
+								<span>{{cardDateErrMsg}}</span>
 							</p>
 						</div>
 						<div class="card_infoI">
 							<p class="cardname cardAll">
 								<label for="cardname">持卡人姓名</label>
 								<input type="text" id="cardname" class="payInput" v-model="cardInfo.cardName"/>
+								<span>{{cardNameErrMsg}}</span>
 							</p>
 							<p class="cardAll">
 								<label for="CSC">安全碼</label>
-								<input type="text" id="CSC" class="payInput" maxlength="3" v-model="cardInfo.cardcsc" />
+								<input type="text" id="CSC" class="payInput" maxlength="3" v-model="cardInfo.cardcsc" placeholder="111"/>
+								<span>{{cardcscErrMsg}}</span>
 							</p>
 						</div>
 					</li>
