fix: 小遊戲手機版 bug fix

--- a/src/game.html
+++ b/src/game.html
@@ -137,6 +137,7 @@
 
         } else {
             shaver.remove();
+            $('.game-html').css("cursor", "cursor");
             game_area.querySelector("p").innerHTML = "用手指點擊來幫綿羊剃毛吧！";
             click_type = "click";
             document.addEventListener("touchstart", function (e) {
